tests/compiler_errors/if_unclosed_else_block.tlp
if true do 
else false